# src/main/java/com/isaac/approvalworkflowengine/rules/model/AllExpression.java
@@ -1,0 +1,6 @@
+package com.isaac.approvalworkflowengine.rules.model;
+
+import java.util.List;
+
+public record AllExpression(List<RuleExpression> expressions) implements RuleExpression {
+}
